modify startup file

--- a/Objects/stm32.build_log.htm
+++ b/Objects/stm32.build_log.htm
@@ -27,22 +27,11 @@ Project File Date:  12/04/2016
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling main.c...
-user\main.c(6): warning:  #951-D: return type of function "main" must be "int"
-  void main(){
-user\main.c(7): warning:  #223-D: function "system_clk_set" declared implicitly
-  	system_clk_set();
-user\main.c(25): warning:  #223-D: function "usart1_init" declared implicitly
-  	usart1_init();
-user\main.c(26): warning:  #223-D: function "uprintf" declared implicitly
-  	uprintf(USART1,"hello,world!\n");
-user\main.c(31): warning:  #111-D: statement is unreachable
-  	return ;
-user\main.c: 5 warnings, 0 errors
+assembling startup_stm32f10x_hd.s...
 linking...
-Program Size: Code=8100 RO-data=784 RW-data=24 ZI-data=1632  
+Program Size: Code=1204 RO-data=320 RW-data=0 ZI-data=1632  
 FromELF: creating hex file...
-".\Objects\stm32.axf" - 0 Error(s), 5 Warning(s).
+".\Objects\stm32.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   C:\Users\Administrator\Desktop\STM32F103\RTE
